--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,5 +27,6 @@
   "proxy_error": "Error on connect to proxy: %s",
   "session_conflict": "The session number is %s but the configured number %s",
   "waiting_information": "Waiting for qrcode/pairing code",
-  "reload": "Reload"
+  "reload": "Reload",
+  "message_deleted_prefix": "This message was deleted: "
 }
